add endpoint to download pdf by simulation
