# portal-api/app/controllers/api/v1/simulations_controller.rb
@@ -3,8 +3,9 @@
 module Api
   module V1
     class SimulationsController < ApplicationController
-      before_action :authenticate_customer!, only: %i[index create show]
-      before_action :customer, only: %i[index create show]
+      before_action :authenticate_customer!, only: %i[index create show download]
+      before_action :customer, only: %i[index create show download]
+      before_action :simulation, only: %i[show download]
 
       def index
         @simulations = @customer.simulations
@@ -20,8 +21,23 @@ module Api
         SelectBestPowerGeneratorsUseCase.call(simulation: @simulation)
       end
 
-      def show
-        @simulation = @customer.simulations.find(params[:id])
+      def show; end
+
+      def download
+        pdf_html = render_to_string(template: 'api/v1/simulations/download.pdf.erb')
+
+        pdf_file = WickedPdf.new.pdf_from_string(pdf_html)
+        temp_pdf = Tempfile.new(['simulation_', '.pdf'], encoding: 'ascii-8bit')
+        temp_pdf.binmode
+        temp_pdf.write(pdf_file)
+        temp_pdf.close
+
+        send_file(
+          temp_pdf.path,
+          filename: "simulation_#{@simulation.id}.pdf",
+          type: 'application/pdf',
+          disposition: 'attachment'
+        )
       end
 
       private
@@ -36,6 +52,10 @@ module Api
 
       def customer
         @customer ||= current_customer
+      end
+
+      def simulation
+        @simulation ||= @customer.simulations.find(params[:id])
       end
     end
   end
